--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -13,132 +14,57 @@
         android:id="@+id/content_frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/mainbk">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAppBar"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+        android:background="@color/colorCh">
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="396dp"
             android:layout_height="match_parent"
             android:backgroundTint="@android:color/transparent">
 
             <TextView
-                android:id="@+id/tvOutput"
-                android:layout_width="124dp"
-                android:layout_height="46dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="16dp"
-                android:text="City"
-                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <EditText
-                android:id="@+id/etNative"
-                android:layout_width="204dp"
+                android:id="@+id/textView"
+                android:layout_width="220sp"
                 android:layout_height="48dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="16dp"
-                android:layout_weight="0"
-                android:hint="Enter Location here"
-                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <RelativeLayout
-                android:id="@+id/linearLayout3"
-                android:layout_width="207dp"
-                android:layout_height="87dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="16dp"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toTopOf="@+id/skBarId"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <TextView
-                    android:id="@+id/tvAudio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:layout_above="@+id/buStart"
-                    android:layout_alignParentStart="true"
-                    android:layout_toStartOf="@+id/buStop"
-                    android:text="Audio Player"
-                    android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/buStart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_weight="1"
-                    android:onClick="startMedia"
-                    android:text="@string/btextStart" />
-
-                <Button
-                    android:id="@+id/buStop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="15dp"
-                    android:layout_toEndOf="@+id/buStart"
-                    android:layout_weight="0"
-                    android:breakStrategy="simple"
-                    android:onClick="onStop"
-                    android:text="@string/bStopText" />
-
-            </RelativeLayout>
-
-            <SeekBar
-                android:id="@+id/skBarId"
-                android:layout_width="338dp"
-                android:layout_height="33dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="352dp"
-                android:layout_height="189dp"
-                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:orientation="vertical"
-                android:padding="5dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="16dp"
+                android:text="Weather App"
+                android:textAlignment="center"
+                android:textColor="@color/colorLogo"
+                android:textSize="36sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iW_icon" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recVew"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/iW_icon"
+                android:layout_width="85dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="156dp"
+                android:color="#e0f2f1"
+                android:elevation="0dp"
+                android:onClick="onWData"
+                android:src="@drawable/tide_logo_1_color_white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            </android.support.constraint.ConstraintLayout>
         </android.support.constraint.ConstraintLayout>
     </FrameLayout>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/colornavBk"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu" />
+    <!--<android.support.design.widget.NavigationView-->
+        <!--android:id="@+id/nav_view"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start"-->
+        <!--android:background="@color/colornavBk"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--app:headerLayout="@layout/nav_header"-->
+        <!--app:menu="@menu/nav_menu" />-->
 
 
 </android.support.v4.widget.DrawerLayout>
