--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorCh2"
     android:orientation="vertical"
-    tools:context="ghar.root.weather_Test.Facial.WeatherAct">
+    tools:context="ghar.root.weatherOrg.facial.Views.WeatherAct">
 
     <FrameLayout
         android:layout_marginTop="30dp"
@@ -24,8 +24,9 @@
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="0dp">
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="0dp">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="325dp"
@@ -84,9 +85,6 @@
 
             </FrameLayout>
 
-
-
-
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout"
                 android:layout_width="362dp"
@@ -120,11 +118,3 @@
 
 
 </android.support.design.widget.CoordinatorLayout>
-
-    <!--android:name="ghar.root.weather_Test.Facial.WeatherActFragment"-->
-
-    <!--<android.support.design.widget.AppBarLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:theme="@style/AppBarOverlay">-->
-    <!--</android.support.design.widget.AppBarLayout>-->
