--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:id="@+id/content_frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorCh">
+        android:background="@color/colorStore">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="396dp"
@@ -28,7 +28,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:text="Weather App"
+                android:text="Bottle Store"
                 android:textAlignment="center"
                 android:textColor="@color/colorLogo"
                 android:textSize="36sp"
