--- a/app/src/main/res/layout/forecast_list.xml
+++ b/app/src/main/res/layout/forecast_list.xml
@@ -1,264 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     android:background="@color/colorCh2"
+    android:orientation="vertical"
     android:padding="5dp">
 
     <android.support.v7.widget.CardView
         style="@style/Base.CardView"
         android:layout_width="match_parent"
-        android:layout_height="148dp"
-
-        app:cardBackgroundColor="@color/colorCh2"
+        android:layout_height="match_parent"
         android:background="?android:attr/fastScrollPreviewBackgroundLeft"
         android:padding="35dp"
+        app:cardBackgroundColor="@color/colorCh2"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="12dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="138dp"
+            android:layout_width="379dp"
+            android:layout_height="match_parent"
             android:background="@color/colorCh2"
             android:orientation="vertical">
 
             <android.support.constraint.ConstraintLayout
-                android:id="@+id/topDaysLayer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingHorizontal="20dp">
-
-                <TextView
-                    android:id="@+id/tvMon0"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:text="Mon"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvTue0"
-                    android:layout_width="61dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:text="Tue"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/tvMon0"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvWed0"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:text="Wed"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/tvTue0"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvThur0"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:text="Thur"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvWed0"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0" />
-
-                <TextView
-                    android:id="@+id/tvFri0"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginEnd="9dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:text="Fri"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvThur0"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </android.support.constraint.ConstraintLayout>
-
-            <android.support.constraint.ConstraintLayout
                 android:id="@+id/MedDaysLayer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="557dp"
                 android:layout_marginTop="5dp">
 
                 <ImageView
-                    android:id="@+id/imgMon"
-                    android:layout_width="50dp"
-                    android:layout_height="45dp"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginTop="4dp"
-                    android:color="#e0f2f1"
-                    android:elevation="0dp"
-                    android:src="@drawable/sunny"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/imgTue"
-                    android:layout_width="50dp"
-                    android:layout_height="45dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="4dp"
-                    android:elevation="0dp"
-                    android:src="@drawable/sunny"
-                    app:layout_constraintStart_toEndOf="@+id/imgMon"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/imgWed"
-                    android:layout_width="50dp"
-                    android:layout_height="45dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="4dp"
-                    android:elevation="0dp"
-                    android:src="@drawable/sunny"
-                    app:layout_constraintStart_toEndOf="@+id/imgTue"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/imgThu"
-                    android:layout_width="51dp"
-                    android:layout_height="45dp"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="4dp"
-                    android:color="#e0f2f1"
-                    android:elevation="0dp"
-                    android:src="@drawable/cloudy"
-                    app:layout_constraintStart_toEndOf="@+id/imgWed"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
                     android:id="@+id/imgFri"
-                    android:layout_width="50dp"
-                    android:layout_height="45dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_width="116dp"
+                    android:layout_height="121dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
                     android:color="#e0f2f1"
                     android:elevation="0dp"
                     android:src="@drawable/cloudy"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/imgThu"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-
-            </android.support.constraint.ConstraintLayout>
-
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="37dp"
-                android:layout_marginTop="5dp"
-                app:layout_constraintTop_toBottomOf="@id/MedDaysLayer">
-
-                <TextView
-                    android:id="@+id/tvMon"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textAlignment="center"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintHorizontal_bias="0.224"
+                    app:layout_constraintStart_toEndOf="@+id/tvAddr"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tvTue"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textAlignment="center"
-                    app:layout_constraintStart_toEndOf="@+id/tvMon"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvWed"
-                    android:layout_width="60dp"
-                    android:layout_height="18dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textAlignment="center"
-                    app:layout_constraintStart_toEndOf="@+id/tvTue"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvThur"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textAlignment="center"
-                    app:layout_constraintStart_toEndOf="@+id/tvWed"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvFri"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/tvPhone"
+                    android:layout_width="149dp"
+                    android:layout_height="38dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="4dp"
                     android:gravity="center_vertical"
-                    android:textAlignment="center"
+                    android:hint="Phone"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvThur"
+                    app:layout_constraintHorizontal_bias="0.133"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvAddr" />
+
+                <TextView
+                    android:id="@+id/tvView"
+                    android:layout_width="88dp"
+                    android:layout_height="28dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="208dp"
+                    android:text="Address:"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.078"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <TextView
+                    android:id="@+id/tvAddr"
+                    android:layout_width="154dp"
+                    android:layout_height="36dp"
+                    android:layout_marginStart="36dp"
+                    android:layout_marginTop="8dp"
+                    android:hint="Adderss Here"
+                    android:textAlignment="textStart"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvView" />
+
+
             </android.support.constraint.ConstraintLayout>
+
+            <!--<android.support.constraint.ConstraintLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="37dp"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/MedDaysLayer">-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/tvMon"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_marginStart="24dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textAlignment="center"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/tvTue"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textAlignment="center"-->
+            <!--app:layout_constraintStart_toEndOf="@+id/tvMon"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/tvWed"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="18dp"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textAlignment="center"-->
+            <!--app:layout_constraintStart_toEndOf="@+id/tvTue"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/tvThur"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textAlignment="center"-->
+            <!--app:layout_constraintStart_toEndOf="@+id/tvWed"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/tvFri"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_marginEnd="8dp"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textAlignment="center"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintStart_toEndOf="@+id/tvThur"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+            <!--</android.support.constraint.ConstraintLayout>-->
 
 
         </LinearLayout>
