--- a/app/src/main/res/layout/fragment_weather_out.xml
+++ b/app/src/main/res/layout/fragment_weather_out.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="ghar.root.everydayweather.facial.Views.WeatherfView">
+    tools:context="one.Views.BottlefView">
 
     <!-- TODO: Update blank fragment layout -->
     <FrameLayout
