--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorCustBk">#43d2dcfa</color>
     <color name="colorMainBk">#43b4c2ed</color>
     <color name="colorCust1">#ab7171</color>
-    <color name="colorCh">#5c6bc0</color>
+    <color name="colorStore">#4f3369</color>
     <color name="colorCh2">#49599a</color>
     <color name="colorAppBar">#2504f7e7</color>
     <color name="colornavBk">#fcd9efef</color>
