--- a/app/src/main/res/layout/activity_bottle.xml
+++ b/app/src/main/res/layout/activity_bottle.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorCh2"
+    android:background="@color/colorAppBar"
     android:orientation="vertical"
     tools:context="one.Views.BottleStore">
-    <!--tools:context="ghar.root.everydayweather.facial.Views.WeatherAct"-->
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -15,65 +14,10 @@
         android:layout_height="486dp"
         android:layout_marginTop="30dp">
 
-
-        <!--<android.support.constraint.ConstraintLayout-->
-            <!--android:layout_width="346dp"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:layout_marginEnd="8dp"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:background="@drawable/mrect"-->
-            <!--android:backgroundTint="@color/whity"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintHorizontal_bias="0.511"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toTopOf="parent">-->
-
-            <!--&lt;!&ndash;<EditText&ndash;&gt;-->
-                <!--&lt;!&ndash;android:id="@+id/userIn"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_width="230dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_height="45dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_marginStart="8dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_marginTop="4dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:background="@drawable/mrect"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:elevation="2dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:ems="10"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:hint="Search A City"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:textAlignment="textStart"&ndash;&gt;-->
-                <!--&lt;!&ndash;app:layout_constraintStart_toEndOf="@+id/imView1"&ndash;&gt;-->
-                <!--&lt;!&ndash;app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;-->
-
-            <!--<ImageView-->
-                <!--android:id="@+id/imView1"-->
-                <!--android:layout_width="42dp"-->
-                <!--android:layout_height="29dp"-->
-                <!--android:layout_marginBottom="8dp"-->
-                <!--android:layout_marginStart="8dp"-->
-                <!--android:layout_marginTop="8dp"-->
-                <!--android:onClick="onImageClick1"-->
-                <!--app:layout_constraintBottom_toBottomOf="parent"-->
-                <!--app:layout_constraintStart_toStartOf="parent"-->
-                <!--app:layout_constraintTop_toTopOf="parent"-->
-                <!--app:srcCompat="@drawable/search" />-->
-        <!--</android.support.constraint.ConstraintLayout>-->
-
-
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:backgroundTint="@android:color/transparent">
-
-            <!--<android.support.constraint.ConstraintLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--app:layout_constraintTop_toTopOf="parent"-->
-            <!--tools:layout_editor_absoluteX="0dp">-->
-
-            <!---->
-
-            <!--</android.support.constraint.ConstraintLayout>-->
 
             <FrameLayout
                 android:id="@+id/fragLayout"
@@ -98,6 +42,7 @@
                 android:layout_marginStart="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:backgroundTint="@color/colorCust1"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="UnknownId">
