--- a/app/src/main/res/layout/forecast_list.xml
+++ b/app/src/main/res/layout/forecast_list.xml
@@ -5,9 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorCh2"
+    android:background="@color/colorAppBar"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:paddingRight="15dp">
 
     <android.support.v7.widget.CardView
         style="@style/Base.CardView"
@@ -15,20 +15,22 @@
         android:layout_height="match_parent"
         android:background="?android:attr/fastScrollPreviewBackgroundLeft"
         android:padding="35dp"
-        app:cardBackgroundColor="@color/colorCh2"
+        app:cardBackgroundColor="@color/colorAppBar"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="12dp">
 
         <LinearLayout
-            android:layout_width="379dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorCh2"
+            android:background="@color/colorAppBar"
             android:orientation="vertical">
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/MedDaysLayer"
-                android:layout_width="match_parent"
+                android:layout_width="382dp"
                 android:layout_height="557dp"
+                android:layout_margin="5dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="5dp">
 
                 <ImageView
