--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,11 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorCustBk">#43d2dcfa</color>
-    <color name="colorMainBk">#43b4c2ed</color>
+    <color name="colorMainBk">#431e7b7c</color>
     <color name="colorCust1">#ab7171</color>
     <color name="colorStore">#4f3369</color>
     <color name="colorCh2">#49599a</color>
-    <color name="colorAppBar">#2504f7e7</color>
+    <color name="colorAppBar">#795d5d</color>
     <color name="colornavBk">#fcd9efef</color>
     <color name="colorLogo">#ffffff</color>
     <color name="whity">#e7eaef</color>
