--- a/app/src/main/res/layout/activity_bottle.xml
+++ b/app/src/main/res/layout/activity_bottle.xml
@@ -11,56 +11,50 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="486dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:backgroundTint="@android:color/transparent">
 
             <FrameLayout
-                android:id="@+id/fragLayout"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_marginBottom="36dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.557">
+            android:id="@+id/fragLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             </FrameLayout>
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout"
-                android:layout_width="370dp"
-                android:layout_height="417dp"
-                android:layout_marginBottom="64dp"
+                android:layout_width="match_parent"
+                android:layout_height="449dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="60dp"
                 android:backgroundTint="@color/colorCust1"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="UnknownId">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/list_forcast"
                     android:layout_width="match_parent"
-                    android:layout_height="390dp"
+                    android:layout_height="432dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="4dp"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.25"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
             <!--</FrameLayout>-->
