--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#e0195c</color>
     <color name="colorCustBk">#43d2dcfa</color>
     <color name="colorMainBk">#431e7b7c</color>
     <color name="colorCust1">#ab7171</color>
