- Added MapView with animated Camera, and permission moved to launcher

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="colorAppBar">#795d5d</color>
     <color name="colornavBk">#fcd9efef</color>
     <color name="colorLogo">#ffffff</color>
-    <color name="whity">#e7eaef</color>
+    <color name="whity">#d6e3fa</color>
 </resources>
