--- a/app/src/main/res/layout/activity_bottle.xml
+++ b/app/src/main/res/layout/activity_bottle.xml
@@ -22,7 +22,7 @@
             <FrameLayout
             android:id="@+id/fragLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
