--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,62 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/sunrise"
+    android:elevation="4dp"
+    android:padding="12dp"
     tools:context="one.Views.StoreDetails">
+    <!--card_view:layout_constraintCircle="@style/Base.TextAppearance.AppCompat.Display4"-->
+
+    <TextView
+        android:id="@+id/detailsheading"
+        style="@android:style/Widget.Material.TextView.SpinnerItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:fontFamily="@font/abhaya_libre"
+        android:text="Mall Information:"
+        android:textAppearance="@android:style/ButtonBar"
+        android:textColor="@android:color/holo_blue_light"
+        android:textColorHighlight="@color/whity"
+        android:textColorHint="@android:color/holo_red_light"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         style="@style/Base.CardView"
-        android:layout_width="match_parent"
-        android:layout_height="234dp"
-        android:layout_marginBottom="56dp"
+        android:layout_width="361dp"
+        android:layout_height="246dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="12dp"
-        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.0"
+        card_view:layout_constraintHorizontal_bias="0.571"
         card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.178">
+        card_view:layout_constraintTop_toBottomOf="@+id/detailsheading">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:background="@drawable/shopping_details"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:orientation="horizontal"
+            >
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:background="@drawable/shopping_details">
 
                 <TextView
                     android:id="@+id/tVDetailAddr"
-                    android:layout_width="183dp"
-                    android:layout_height="69dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignStart="@+id/tvPhImage"
-                    android:layout_marginBottom="68dp"
+                    android:layout_width="160dp"
+                    android:layout_height="56dp"
+                    android:layout_alignEnd="@+id/tVDetailPh"
+                    android:layout_centerVertical="true"
                     android:fontFamily="@font/cormorant_garamond_light"
                     android:text="TextView"
                     android:textAllCaps="true"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="18sp"
+                    android:textColor="@android:color/holo_blue_dark"
+                    android:textSize="16sp"
                     android:textStyle="bold|italic" />
 
                 <TextView
                     android:id="@+id/tVDetailPh"
                     android:layout_width="129dp"
                     android:layout_height="25dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignTop="@+id/tvPhImage"
-                    android:layout_marginStart="59dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="16dp"
+                    android:layout_toEndOf="@+id/tvPhImage"
                     android:text="TextView"
                     android:textColor="?android:attr/colorPressedHighlight"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tvPhImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="43dp"
+                    android:layout_marginStart="20dp"
+                    android:background="@drawable/ic_local_phone_24dp"
+                    android:onClick="onPhone" />
 
                 <ImageView
                     android:id="@+id/imgDetailLog"
@@ -64,25 +99,43 @@
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginTop="19dp"
+                    android:layout_marginEnd="23dp"
+                    android:layout_marginTop="13dp"
                     android:color="@color/colornavBk"
                     android:elevation="0dp"
                     android:src="?attr/colorPrimary" />
 
-                <TextView
-                    android:id="@+id/tvPhImage"
-                    android:layout_width="30dp"
-                    android:layout_height="25dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginBottom="28dp"
-                    android:layout_marginStart="19dp"
-                    android:onClick="onPhone"
-                    android:background="@drawable/ic_local_phone_24dp"
-                    tools:layout_editor_absoluteX="25dp" />
             </RelativeLayout>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
+
+    <FrameLayout
+        android:id="@+id/frameLayout2"
+        android:layout_width="360dp"
+        style="@style/Base.CardView"
+        android:layout_height="225dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:elevation="12dp"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintStart_toStartOf="parent">
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/mapCandidate"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            >
+
+        </android.support.constraint.ConstraintLayout>
+
+    </FrameLayout>
+
+
+    <!--style="@android:style/Widget.Material.TextView.SpinnerItem"-->
+
+
 </android.support.constraint.ConstraintLayout>
