--- a/app/src/main/res/drawable/ic_business_center_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_business_center_black_24dp.xml
@@ -1,5 +1,18 @@
-<vector android:height="24dp" android:tint="#4BB4FF"
+<vector android:height="24dp"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M10,16v-1L3.01,15L3,19c0,1.11 0.89,2 2,2h14c1.11,0 2,-0.89 2,-2v-4h-7v1h-4zM20,7h-4.01L15.99,5l-2,-2h-4l-2,2v2L4,7c-1.1,0 -2,0.9 -2,2v3c0,1.11 0.89,2 2,2h6v-2h4v2h6c1.1,0 2,-0.9 2,-2L22,9c0,-1.1 -0.9,-2 -2,-2zM14,7h-4L10,5h4v2z"/>
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android"
+    android:tint="?android:attr/textColorPrimary"
+    >
+
+    <path
+        android:fillColor="#DADCE0"
+        android:pathData="M10,16v-1L3.01,15L3,19c0,1.11 0.89,2 2,2h14c1.11,0 2,-0.89 2,-2v-4h-7v1h-4zM20,7h-4.01L15.99,5l-2,-2h-4l-2,2v2L4,7c-1.1,0 -2,0.9 -2,2v3c0,1.11 0.89,2 2,2h6v-2h4v2h6c1.1,0 2,-0.9 2,-2L22,9c0,-1.1 -0.9,-2 -2,-2zM14,7h-4L10,5h4v2z"
+        android:fillAlpha="1"
+        android:fillType="evenOdd"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.4"
+        android:strokeColor="#00000000"
+
+        />
+
 </vector>
