--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:descendantFocusability="beforeDescendants"
@@ -13,7 +13,7 @@
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/colorStore">
 
         <android.support.constraint.ConstraintLayout
@@ -47,7 +47,7 @@
                 android:color="#e0f2f1"
                 android:elevation="0dp"
                 android:onClick="onWData"
-                android:src="@drawable/ic_business_center_black_24dp"
+                app:srcCompat="@drawable/ic_business_center_black_24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,4 +56,5 @@
         </android.support.constraint.ConstraintLayout>
     </FrameLayout>
 
-</android.support.v4.widget.DrawerLayout>
+</android.support.v7.widget.CardView>
+<!--</android.support.design.card.MaterialCardView>-->
