--- a/app/src/main/res/layout/conactsgenlist.xml
+++ b/app/src/main/res/layout/conactsgenlist.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAppBar"
     android:orientation="vertical"
     >
 
@@ -13,14 +12,13 @@
         style="@style/Base.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAppBar"
+        android:layout_marginBottom="1.5dp"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="12dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorAppBar"
             android:orientation="vertical">
 
             <android.support.constraint.ConstraintLayout
@@ -28,7 +26,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@color/colorCustBk"
                 android:padding="5dp">
 
                 <ImageView
@@ -91,88 +88,9 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvView" />
-
-
             </android.support.constraint.ConstraintLayout>
 
-            <!--<android.support.constraint.ConstraintLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="37dp"-->
-            <!--android:layout_marginTop="5dp"-->
-            <!--app:layout_constraintTop_toBottomOf="@id/MedDaysLayer">-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/tvMon"-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_marginStart="24dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:gravity="center_vertical"-->
-            <!--android:textAlignment="center"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/tvTue"-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:gravity="center_vertical"-->
-            <!--android:textAlignment="center"-->
-            <!--app:layout_constraintStart_toEndOf="@+id/tvMon"-->
-            <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/tvWed"-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="18dp"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:gravity="center_vertical"-->
-            <!--android:textAlignment="center"-->
-            <!--app:layout_constraintStart_toEndOf="@+id/tvTue"-->
-            <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/tvThur"-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:gravity="center_vertical"-->
-            <!--android:textAlignment="center"-->
-            <!--app:layout_constraintStart_toEndOf="@+id/tvWed"-->
-            <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/tvFri"-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_marginEnd="8dp"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:gravity="center_vertical"-->
-            <!--android:textAlignment="center"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toEndOf="@+id/tvThur"-->
-            <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-            <!--</android.support.constraint.ConstraintLayout>-->
-
-
         </LinearLayout>
-
 
     </android.support.v7.widget.CardView>
 
